--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,6 +98,15 @@ services:
     volumes:
       - ./minio:/tmp/data
 
+  dremio:
+    image: dremio/dremio-oss
+    container_name: dremio
+    networks:
+      - lakehouse_net
+    ports:
+      - "9047:9047"
+      - "31010:31010"
+
 volumes:
   postgres:
   pgadmin4:
